// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";

package docker_pb;


service GetDocker {
  rpc GetDockerInfo (DockerInfoRequest) returns (DockerInfoReply) {}
  rpc GetDockerImages (DockerImagesRequest) returns (DockerImagesReply) {}
}
// The request message containing the user's name.
// message HelloRequest {
//   string name = 1;
// }

// // The response message containing the greetings
// message HelloReply {
//   string message = 1;
// }

message DockerImagesReply {
  repeated Image images = 1;
}

message Image {
  string id = 1;
  uint64 created = 2;
  string parent_id = 3;
  repeated string repo_digests = 4;
  uint64 size = 5;
  uint64 virtual_size = 6;
  map<string, string> labels = 7;
  repeated string tags = 8;
}

message DockerInfoRequest {
  string path = 1;
}

message DockerInfoReply {
  string info = 1;
}

message DockerImagesRequest{
  string req = 1;
}